Initial map with a little functionality
